--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
   },
   "homepage": "https://github.com/mikeheim/election#readme",
   "dependencies": {
+    "bcrypt": "^3.0.2",
+    "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "helmet": "^3.14.0",
     "jsonwebtoken": "^8.3.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.41.0",
+    "sequelize-hierarchy": "^1.3.2"
   }
 }
